# Spotify-Analytics-

./: .gitignore  ENDPOINTS.md  FRONTEND_SETUP.md  README.md  SECURITY_CHECK.md  env.example  pyproject.toml
app/: config.py  dependencies.py  main.py
app/artists/: router.py  schemas.py  service.py
app/auth/: router.py  schemas.py  service.py  token_store.py
app/common/: exceptions.py  middleware.py  schemas.py
app/history/: router.py  schemas.py  service.py
app/spotify/: client.py  endpoints.py  exceptions.py
app/tracks/: router.py  schemas.py  service.py
app/user/: router.py  schemas.py  service.py
frontend/: CRIAR_ENV.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArtistsChart.tsx  AuthSection.tsx  LoadingSpinner.tsx  StatsCards.tsx  TracksChart.tsx  TracksGrid.tsx  WelcomePanel.tsx
frontend/src/types/: index.ts
