[tool.poetry]
name = "spotify-analytics-api"
version = "0.1.0"
description = "API REST para análise de dados do Spotify utilizando FastAPI, seguindo Clean Architecture e SOLID."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
anyio = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

